# evosim3

./: Cargo.toml
evosim-core/: Cargo.toml
evosim-core/src/: lib.rs  life.rs  render.rs  simulation.rs  world.rs
src/: lib.rs
www/: index.html  index.js  package-lock.json  package.json
