[package]
name = "evosim3"
version = "0.3.0"
authors = ["Swiiz <swiizytb@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
evosim-core = { path = "./evosim-core" }
wasm-bindgen = "0.2.63"
js-sys = "0.3.55"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'CanvasRenderingContext2d',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
